--- a/css/main.css
+++ b/css/main.css
@@ -312,7 +312,7 @@ ul {
 .hero {
   margin-left: auto;
   margin-right: auto;
-  max-width: 480px;
+  max-width: 1600px;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/mobile/hero-mob-1.jpg);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/mobile/hero-mob-1.jpg);
   background-repeat: no-repeat;
@@ -329,7 +329,6 @@ ul {
 
 @media screen and (min-width: 768px) {
   .hero {
-    min-width: 768px;
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/tablet/hero-tab-1.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/tablet/hero-tab-1.jpg);
   }
@@ -344,7 +343,6 @@ ul {
 
 @media screen and (min-width: 1200px) {
   .hero {
-    min-width: 1200px;
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/desktop/hero-desk-1.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/desktop/hero-desk-1.jpg);
   }
@@ -352,7 +350,6 @@ ul {
 
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero {
-    min-width: 1200px;
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/desktop/hero-desk-2.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/desktop/hero-desk-2.jpg);
   }
@@ -415,6 +412,10 @@ ul {
           align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
+}
+
+.header-portfolio--border-bottom {
+  border-bottom: 1px solid #ececec;
 }
 
 .about-header {
@@ -597,12 +598,20 @@ ul {
 }
 
 .team__main-header {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: bold;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 1200px) {
+  .team__main-header {
+    font-size: 36px;
+    line-height: 1.17;
+    margin-bottom: 50px;
+  }
 }
 
 .team-list {
@@ -648,6 +657,7 @@ ul {
 
 @media screen and (min-width: 768px) {
   .team-list__item {
+    margin-left: 0;
     width: 354px;
     margin-bottom: 30px;
   }
@@ -659,6 +669,8 @@ ul {
 @media screen and (min-width: 1200px) {
   .team-list__item {
     width: 270px;
+  }
+  .team-list__item:not(:last-child) {
     margin-right: 30px;
   }
 }
@@ -766,8 +778,15 @@ ul {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-right: -30px;
+  /* margin-right: -30px; */
   margin-top: -30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .regular-customers-list {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
 }
 
 .regular-customers-list__link {
@@ -819,23 +838,29 @@ ul {
 }
 
 .regular-customers-list__item {
-  -ms-flex-preferred-size: calc(100% / 2 - 30px);
-      flex-basis: calc(100% / 2 - 30px);
-  margin-right: 30px;
+  -ms-flex-preferred-size: calc(100% / 2 - 15px);
+      flex-basis: calc(100% / 2 - 15px);
   margin-top: 30px;
 }
 
-@media screen and (min-width: 768px) {
-  .regular-customers-list__item {
-    -ms-flex-preferred-size: 45.33333px;
-        flex-basis: 45.33333px;
-  }
+.regular-customers-list__item:nth-child(odd) {
+  margin-right: 30px;
 }
 
 @media screen and (min-width: 768px) {
   .regular-customers-list__item {
-    -ms-flex-preferred-size: none;
-        flex-basis: none;
+    margin-right: 30px;
+    -ms-flex-preferred-size: calc(100% / 3 - 45px);
+        flex-basis: calc(100% / 3 - 45px);
+  }
+  .regular-customers-list__item:nth-child(3n) {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .regular-customers-list__item:not(:last-child) {
+    margin-right: 30px;
   }
 }
 
